GNOME Bugzilla – Bug 642810
[PATCH] Patch for gcc warnings
Last modified: 2011-03-02 18:10:03 UTC
Created attachment 181407 [details] [review] patch for warnings attached...
Review of attachment 181407 [details] [review]: Could you please split the patch, one commit per panel, for example: "display: Fix warnings from GCC 4.6" ::: panels/datetime/tz.c @@ +197,3 @@ tz_location_set_locally (TzLocation *loc) { +#if 0 Just remove the code. ::: panels/display/xrandr-capplet.c @@ +680,2 @@ gboolean sensitive; +#endif Just remove that code. ::: panels/info/cc-info-panel.c @@ -352,2 @@ static gboolean -get_is_graphics_accelerated (void) Nope, that's going to be used soon.
Should I just remove the correction variable in tz_location_set_locally() and make the function void? It's just returning 0 always now...
Or maybe remove the whole function since it's not used in any file in datetime.
Let's remove the whole thing if it's not working as expected.
Created attachment 181496 [details] [review] patch for datetime
Created attachment 181497 [details] [review] patch for display panel
Created attachment 181498 [details] [review] patch for media panel
Created attachment 181499 [details] [review] patch for shell
Review of attachment 181497 [details] [review]: This patch contains far more than just the display panel changes... Will split.