datetime: Fix GCC 4.6 warnings

https://bugzilla.gnome.org/show_bug.cgi?id=642810